feat: colocando capacidade de andar

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 
       <!-- Configuração da mesa (cubo grande) -->
       <a-box
-        position="0 1.5 -3"
+        position="0 0.75 -3" <!-- Altura ajustada para a altura da cintura -->
         color="brown"
         depth="3"
-        height="1"
+        height="1.5" <!-- Ajuste de altura -->
         width="3"
       ></a-box>
 
       <!-- Configuração do cubo menor em cima da mesa -->
       <a-box
         id="cubo-interativo"
-        position="0 2.8 -3"
+        position="0 2.5 -3" <!-- Ajuste de altura -->
         color="blue"
         depth="1"
         height="0.5"
