--- a/index.html
+++ b/index.html
@@ -1,48 +1,27 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <title>Exemplo A-Frame com Controles do Quest 2</title>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Exemplo VR com A-Frame</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v6.1.0/dist/aframe-extras.min.js"></script>
-</head>
-<body>
-    <a-scene oculus-touch-controls-enabled>
-        <!-- Chão verde -->
-        <a-plane position="0 0 -4" rotation="-90 0 0" width="20" height="20" color="green"></a-plane>
+  </head>
+  <body>
+    <a-scene>
+      <!-- Chão verde -->
+      <a-plane position="0 0 0" rotation="-90 0 0" width="100" height="100" color="#00FF00"></a-plane>
 
-        <!-- Controle de câmera -->
-        <a-entity id="cameraRig" position="0 0 0">
-            <a-entity camera look-controls wasd-controls-enabled="false" position="0 1.6 0" movement-controls></a-entity>
-        </a-entity>
+      <!-- Controlador da mão esquerda com cubo vermelho -->
+      <a-entity oculus-touch-controls="hand: left" id="leftController">
+        <a-box position="0 0 0" width="0.1" height="0.1" depth="0.1" color="#FF0000"></a-box>
+      </a-entity>
 
-        <!-- Cubos amarelos para as mãos -->
-        <a-entity id="leftHand" mixin="yellowCube" scale="0.05 0.05 0.05" position="-0.5 0 -1"></a-entity>
-        <a-entity id="rightHand" mixin="yellowCube" scale="0.05 0.05 0.05" position="0.5 0 -1"></a-entity>
+      <!-- Controlador da mão direita com cubo azul -->
+      <a-entity oculus-touch-controls="hand: right" id="rightController">
+        <a-box position="0 0 0" width="0.1" height="0.1" depth="0.1" color="#0000FF"></a-box>
+      </a-entity>
 
-        <!-- Mixin para definir a cor dos cubos amarelos -->
-        <a-mixin id="yellowCube" geometry="primitive: box" material="color: yellow"></a-mixin>
-
-        <!-- Script para atualizar a posição dos cubos das mãos -->
-        <script>
-            AFRAME.registerComponent('update-hand-position', {
-                init: function () {
-                    this.el.sceneEl.addEventListener('controllersupdated', this.updatePosition.bind(this));
-                },
-                updatePosition: function () {
-                    var leftController = document.querySelector('[oculus-touch-controls="hand: left"]');
-                    var rightController = document.querySelector('[oculus-touch-controls="hand: right"]');
-                    var leftHand = document.querySelector('#leftHand');
-                    var rightHand = document.querySelector('#rightHand');
-
-                    leftHand.object3D.position.copy(leftController.object3D.position);
-                    rightHand.object3D.position.copy(rightController.object3D.position);
-                }
-            });
-        </script>
-        <!-- Componente para atualizar a posição das mãos -->
-        <a-entity update-hand-position></a-entity>
+      <!-- Ambiente básico -->
+      <a-sky color="#ECECEC"></a-sky>
     </a-scene>
-</body>
+  </body>
 </html>
