--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
         <a-box position="0 0 0" width="0.1" height="0.1" depth="0.1" color="#0000FF"></a-box>
       </a-entity>
 
+      <!-- Personagem GLTF -->
+      <a-entity gltf-model="url(item.gltf)" position="0 0 0" scale="1 1 1"></a-entity>
+
       <!-- Ambiente básico -->
       <a-sky color="#ECECEC"></a-sky>
     </a-scene>
   </body>
 </html>
+    
