feat: subindo modelo com baixos poligonoso

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <a-box position="0 0 0" width="0.1" height="0.1" depth="0.1" color="#0000FF"></a-box>
       </a-entity>
 
-      <!-- Quadrado substituindo o modelo GLTF -->
-      <a-box position="0 1 -5" scale="1 1 1" color="#4CC3D9"></a-box>
+      <!-- Personagem GLTF -->
+      <a-entity gltf-model="url(sallya/scene.glft)" position="0 0 0" scale="1 1 1"></a-entity>
 
       <!-- Ambiente básico -->
       <a-sky color="#ECECEC"></a-sky>
