--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </a-entity>
 
       <!-- Personagem GLTF -->
-      <a-entity gltf-model="url(sallya/scene.gltf)" position="0 0 0" scale="1 1 1"></a-entity>
+      <a-entity gltf-model="url(pretty/scene.gltf)" position="0 0 0" scale="1 1 1"></a-entity>
 
       <!-- Ambiente básico -->
       <a-sky color="#ECECEC"></a-sky>
